@@ -92,7 +92,7 @@ static apr_status_t file_dup(apr_file_t **new_file,
 
     apr_pool_cleanup_register((*new_file)->pool, (void *)(*new_file),
                               apr_unix_file_cleanup, 
-                              apr_unix_file_cleanup);
+                              apr_unix_child_file_cleanup);
 #ifndef WAITIO_USES_POLL
     /* Start out with no pollset.  apr_wait_for_io_or_timeout() will
      * initialize the pollset if needed.
@@ -146,7 +146,7 @@ APR_DECLARE(apr_status_t) apr_file_setaside(apr_file_t **new_file,
                                   apr_unix_file_cleanup,
                                   ((*new_file)->flags & APR_INHERIT)
                                      ? apr_pool_cleanup_null
-                                     : apr_unix_file_cleanup);
+                                     : apr_unix_child_file_cleanup);
     }
 
     old_file->filedes = -1;
